fix: task_id=1156867193004167198 canvas overflow issue

--- a/src/pages/editor/index.module.less
+++ b/src/pages/editor/index.module.less
@@ -135,6 +135,7 @@
   min-height: 100%;
   flex-direction: column;
   overflow: auto;
+  height: calc(100vh - 86px);
 }
 
 .formPanel {
